--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                     <div class="navbar-end">
                         <div class="navbar-item">
-                            <a class="navbar-item button">
+                            <a class="navbar-item button is-link is-rounded">
                                 Curriculum
                             </a>
 
@@ -304,6 +304,35 @@
     <!-- Contacto -->
     <section class="section" id="contact">
         <div class="container">
+
+            <a class="button is-large">
+                <span class="icon">
+                    <i class="fab fa-github"></i>
+                </span>
+                <span>GitHub</span>
+            </a>
+
+            <a class="button is-large">
+                <span class="icon">
+                    <i class="fab fa-linkedin"></i>
+                </span>
+                <span>LinkedIn</span>
+            </a>
+
+            <a class="button is-large">
+                <span class="icon">
+                    <i class="fab fa-facebook"></i>
+                </span>
+                <span>Facebook</span>
+            </a>
+
+            <a class="button is-large">
+                <span class="icon">
+                    <i class="fab fa-twitter"></i>
+                </span>
+                <span>Twitter</span>
+            </a>
+
         </div>
     </section>
     <!-- Fin seccion Contacto -->
