Se centran los links a redes sociales

--- a/index.html
+++ b/index.html
@@ -304,35 +304,44 @@
     <!-- Contacto -->
     <section class="section" id="contact">
         <div class="container">
+            <div class="columns">
+                <div class="column has-text-centered">
+                    <a class="button is-large">
+                        <span class="icon">
+                            <i class="fab fa-github"></i>
+                        </span>
+                        <span>GitHub</span>
+                    </a>
+                </div>
 
-            <a class="button is-large">
-                <span class="icon">
-                    <i class="fab fa-github"></i>
-                </span>
-                <span>GitHub</span>
-            </a>
+                <div class="column has-text-centered">
+                    <a class="button is-large">
+                        <span class="icon">
+                            <i class="fab fa-linkedin"></i>
+                        </span>
+                        <span>LinkedIn</span>
+                    </a>
+                </div>
 
-            <a class="button is-large">
-                <span class="icon">
-                    <i class="fab fa-linkedin"></i>
-                </span>
-                <span>LinkedIn</span>
-            </a>
+                <div class="column has-text-centered">
+                    <a class="button is-large">
+                        <span class="icon">
+                            <i class="fab fa-facebook"></i>
+                        </span>
+                        <span>Facebook</span>
+                    </a>
+                </div>
 
-            <a class="button is-large">
-                <span class="icon">
-                    <i class="fab fa-facebook"></i>
-                </span>
-                <span>Facebook</span>
-            </a>
+                <div class="column has-text-centered">
+                    <a class="button is-large">
+                        <span class="icon">
+                            <i class="fab fa-twitter"></i>
+                        </span>
+                        <span>Twitter</span>
+                    </a>
+                </div>
 
-            <a class="button is-large">
-                <span class="icon">
-                    <i class="fab fa-twitter"></i>
-                </span>
-                <span>Twitter</span>
-            </a>
-
+            </div>
         </div>
     </section>
     <!-- Fin seccion Contacto -->
