pruebas con el pdf

--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
 
                     <div class="navbar-end">
                         <div class="navbar-item">
-                            <a class="navbar-item button is-link is-rounded">
+                            <a class="navbar-item button is-link is-rounded" href="#">
                                 Curriculum
                             </a>
-
                         </div>
                     </div>
                 </div>
