Se agrega margen en el profile

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
+
 
                 <div class="column">
                     <div class="card">
@@ -148,7 +148,7 @@
                                 <div class="media-content">
                                     <p class="title is-4">vscode-jasmine</p>
                                     <p class="subtitle is-6">
-                                        <!-- <span class="tag is-warning">HRMD</span> -->
+                                        <span class="tag is-warning">VSC extension</span>
                                         <!-- <span class="tag is-success">CSS</span> -->
                                         <!-- <span class="tag is-primary">Bulma</span> -->
                                     </p>
@@ -177,6 +177,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="column"> </div>
 
                 <!--div class="column">
                     <div class="card">
