Agrego algunos lenguajes y frameworks con los que tengo experiencia

--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@
                         y seguir creciendo en el área profesional. Trabajo para dos empresas utilizando
                         Angular, Ionic y Jasmine. Y estoy mejorando mis habilidades con Python y Kotlin.
                     </p>
+                    <br>
+                    <p class="subtitle is-6">
+                        <span class="tag is-info">JavaScript</span>
+                        <span class="tag is-link">MySQL</span>
+                        <span class="tag is-primary">PHP</span>
+                        <span class="tag is-success">C</span>
+                        <span class="tag is-warning">Python</span>
+                        <span class="tag is-danger">Kotlin</span>
+                        <span class="tag is-black">HTML</span>
+                        <span class="tag is-dark">LaTex</span>
+                        <span class="tag is-info">CSS</span>
+                        <span class="tag is-primary">Java</span>
+                        <br>
+                        <span class="tag is-info" style="margin-top: 5px;">Ionic</span>
+                        <span class="tag is-primary" style="margin-top: 5px;">Jasmine</span>
+                        <span class="tag is-link" style="margin-top: 5px;">Angular</span>
+                        <span class="tag is-success" style="margin-top: 5px;">Laravel</span>
+                        <span class="tag is-warning" style="margin-top: 5px;">Django</span>
+                        <span class="tag is-danger" style="margin-top: 5px;">Flask</span>
+                    </p>
                 </div>
             </div>
         </div>
@@ -157,9 +177,9 @@
 
                             <div class="content">
                                 Fork de un <a href="https://github.com/xabikos/vscode-jasmine" target="_blank">
-                                    snippet </a> adaptado al Coding Style Guide que se utiliza en 
+                                    snippet </a> adaptado al Coding Style Guide que se utiliza en
                                 <a href="https://www.notedanalytics.com/" target="_blank">Noted Analytics</a>
-                                <br> <br> 
+                                <br> <br>
                                 <div class="has-text-centered">
                                     <div>
                                         <p class="is-size-3">
