--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <p>
                         Ingeniero electrónico y desarrollador de software. Me gusta aprender nuevas tecnologías
                         y seguir creciendo en el área profesional. Trabajo para dos empresas utilizando
-                        Angular, Ionic y Jasmine. Y estoy mejorando mis habilidades con Python y Kotlin.
+                        Angular, Ionic y Jasmine. Actualmente estoy mejorando mis habilidades con Python y Kotlin.
                     </p>
                     <br>
                     <p class="subtitle is-6">
@@ -177,7 +177,7 @@
 
                             <div class="content">
                                 Fork de un <a href="https://github.com/xabikos/vscode-jasmine" target="_blank">
-                                    snippet </a> adaptado al Coding Style Guide que se utiliza en
+                                    snippet </a> adaptado al Coding Style Guide que utilizamos en
                                 <a href="https://www.notedanalytics.com/" target="_blank">Noted Analytics</a>
                                 <br> <br>
                                 <div class="has-text-centered">
