Se agregan algunos tags

--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
                         <span class="tag is-primary" style="margin-top: 5px;">Jasmine</span>
                         <span class="tag is-link" style="margin-top: 5px;">Angular</span>
                         <span class="tag is-success" style="margin-top: 5px;">Laravel</span>
-                        <span class="tag is-warning" style="margin-top: 5px;">Django</span>
                         <span class="tag is-danger" style="margin-top: 5px;">Flask</span>
+                        <span class="tag is-primary" style="margin-top: 5px;">Bulma</span>
+                        <span class="tag is-link" style="margin-top: 5px;">Boostrap</span>
                     </p>
                 </div>
             </div>
