Se agregan margenes al tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
     <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/my.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
@@ -93,13 +94,13 @@
                         <span class="tag is-info">CSS</span>
                         <span class="tag is-primary">Java</span>
                         <br>
-                        <span class="tag is-info" style="margin-top: 5px;">Ionic</span>
-                        <span class="tag is-primary" style="margin-top: 5px;">Jasmine</span>
-                        <span class="tag is-link" style="margin-top: 5px;">Angular</span>
-                        <span class="tag is-success" style="margin-top: 5px;">Laravel</span>
-                        <span class="tag is-danger" style="margin-top: 5px;">Flask</span>
-                        <span class="tag is-primary" style="margin-top: 5px;">Bulma</span>
-                        <span class="tag is-link" style="margin-top: 5px;">Boostrap</span>
+                        <span class="tag is-info">Ionic</span>
+                        <span class="tag is-primary">Jasmine</span>
+                        <span class="tag is-link">Angular</span>
+                        <span class="tag is-success">Laravel</span>
+                        <span class="tag is-danger">Flask</span>
+                        <span class="tag is-primary">Bulma</span>
+                        <span class="tag is-link">Boostrap</span>
                     </p>
                 </div>
             </div>
