--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- Final del navbar -->
 
         <!-- Seccion Home -->
-        <section class="section is-medium" data-aos="zoom-in" id="inicio">
+        <section class="section" data-aos="zoom-in" id="inicio">
             <div class="container">
                 <div class="columns is-centered">
                     <div class="column is-one-quarter">
@@ -104,7 +104,7 @@
         <!-- Fin seccion Home -->
 
         <!-- Seccion trabajos -->
-        <section class="section is-medium" id="portfolio">
+        <section class="section" id="portfolio">
             <div class="container">
 
                 <div class="columns">
