Se cambia informacion personal

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="columns is-centered">
                     <div class="column is-one-quarter">
                         <figure class="image imagen">
-                            <img class="is-rounded" src="https://bulma.io/images/placeholders/480x480.png">
+                            <img class="is-rounded" src="images/mi_foto480.png">
                         </figure>
                     </div>
                     <div class="column">
@@ -73,8 +73,8 @@
                         </p>
                         <p>
                             Ingeniero electrónico y desarrollador de software. Me gusta aprender nuevas tecnologías
-                            y seguir creciendo en el área profesional. Trabajo para dos empresas utilizando
-                            Angular, Ionic y Jasmine. Actualmente estoy mejorando mis habilidades con Python y Kotlin.
+                            y seguir creciendo en el área profesional. Actualmente trabajo con los frameworks 
+                            Angular, Ionic y Jasmine y estoy mejorando mis habilidades con Python y Kotlin.
                         </p>
                         <br>
                         <p class="subtitle is-6">
@@ -123,9 +123,10 @@
                                     <div class="media-content">
                                         <p class="title is-4">PersonalSite</p>
                                         <p class="subtitle is-6">
-                                            <span class="tag mio">HTML</span>
+                                            <span class="tag is-warning">HTML</span>
                                             <span class="tag is-success">CSS</span>
                                             <span class="tag is-primary">Bulma</span>
+                                            <span class="tag is-info">Javascript</span>
                                         </p>
                                     </div>
                                 </div>
