Se sacan algunas etiquetas que se iran mostrando a medida que voy trabajando con ellas

--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
                             <span class="tag is-link">MySQL</span>
                             <span class="tag is-black">HTML</span>
                             <span class="tag is-info">CSS</span>
-                            <span class="tag is-dark">LaTex</span>
-                            <span class="tag is-primary">PHP</span>
-                            <span class="tag is-primary">Java</span>
-                            <span class="tag is-success">C</span>
+                            <!-- <span class="tag is-dark">LaTex</span> -->
+                            <!-- <span class="tag is-primary">PHP</span> -->
+                            <!-- <span class="tag is-primary">Java</span> -->
+                            <!-- <span class="tag is-success">C</span> -->
                             <br>
                             <span class="tag is-info">Ionic</span>
                             <span class="tag is-primary">Jasmine</span>
                             <span class="tag is-link">Angular</span>
                             <span class="tag is-danger">Flask</span>
                             <span class="tag is-primary">Bulma</span>
-                            <span class="tag is-link">Boostrap</span>
-                            <span class="tag is-success">Laravel</span>
+                            <!-- <span class="tag is-link">Boostrap</span> -->
+                            <!-- <span class="tag is-success">Laravel</span> -->
                         </p>
                     </div>
                 </div>
