Se cambia Kotlin por Flutter

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <p>
                             Ingeniero electrónico y desarrollador de software. Me gusta aprender nuevas tecnologías
                             y seguir creciendo en el área profesional. Actualmente trabajo con los frameworks
-                            Angular, Ionic y Jasmine y estoy mejorando mis habilidades con Python y Kotlin.
+                            Angular, Ionic y Jasmine y estoy mejorando mis habilidades con Python y Flutter.
                         </p>
                         <br>
                         <p class="subtitle is-6 is-hidden-mobile">
@@ -95,7 +95,7 @@
                             <span class="tag is-link">Angular</span>
                             <span class="tag is-danger">Flask</span>
                             <span class="tag is-primary">Bulma</span>
-                            <!-- <span class="tag is-link">Boostrap</span> -->
+                            <span class="tag is-link">Flutter</span>
                             <!-- <span class="tag is-success">Laravel</span> -->
                         </p>
                         <p class="subtitle is-6 is-hidden-tablet">
